Added login session with github
